<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:text="@string/title_about"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/about_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/author_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/author_field"
        app:layout_constraintTop_toBottomOf="@id/about_title"
        app:layout_constraintStart_toStartOf="@id/about_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/icon_links"
        app:layout_constraintTop_toBottomOf="@id/author_info"
        app:layout_constraintStart_toStartOf="@id/author_info"/>


</androidx.constraintlayout.widget.ConstraintLayout>