<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsViewModel"
            type="com.example.clockout.fragments.notifications_details.NotificationsDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.notifications_details.NotificationsDetailFragment">

        <Button
            android:id="@+id/delete_button"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="DELETE"
            android:onClick="@{() -> detailsViewModel.onDeleteClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> detailsViewModel.onDateClick()}"
            app:dayofweekImage="@{detailsViewModel.entry}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_button"
            tools:src="@drawable/ic_monday"/>

        <Button
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> detailsViewModel.onDateClick()}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:strokeColor="?attr/colorSecondary"
            app:strokeWidth="1dp"
            app:dateFormatted="@{detailsViewModel.entry}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_image"
            tools:text="June 10, 2020" />

        <TextView
            android:id="@+id/start_time_text"
            style="@style/LeftTextView"
            android:text="@string/start_text"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_start"
            app:layout_constraintBottom_toBottomOf="@id/detail_start"/>


        <Button
            android:id="@+id/detail_start"
            style="@style/RightTextView"
            android:layout_marginTop="@dimen/double_margin"
            android:onClick="@{()-> detailsViewModel.onStartTimeClick()}"
            app:clockInTimeFormatted="@{detailsViewModel.entry}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_date"
            tools:text="8:00 AM" />

        <TextView
            android:id="@+id/lunch_start_time_text"
            style="@style/LeftTextView"
            android:text="@string/start_break_text"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_lunchin"
            app:layout_constraintBottom_toBottomOf="@id/detail_lunchin"/>

        <Button
            android:id="@+id/detail_lunchin"
            style="@style/RightTextView"
            android:onClick="@{()->detailsViewModel.onLunchStartClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_start"
            app:lunchInTimeFormatted="@{detailsViewModel.entry}"
            tools:text="12:00 PM" />

        <TextView
            android:id="@+id/lunch_end_time_text"
            style="@style/LeftTextView"
            android:text="@string/end_break_text"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_lunchout"
            app:layout_constraintBottom_toBottomOf="@id/detail_lunchout"/>

        <Button
            android:id="@+id/detail_lunchout"
            style="@style/RightTextView"
            android:onClick="@{()->detailsViewModel.onLunchEndClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_lunchin"
            app:lunchOutTimeFormatted="@{detailsViewModel.entry}"
            tools:text="12:30 PM" />

        <TextView
            android:id="@+id/end_time_text"
            style="@style/LeftTextView"
            android:text="@string/end_text"
            android:textSize="@dimen/detail_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_end"
            app:layout_constraintBottom_toBottomOf="@id/detail_end"/>

        <Button
            android:id="@+id/detail_end"
            style="@style/RightTextView"
            android:onClick="@{()->detailsViewModel.onEndTimeClick()}"
            android:singleLine="false"
            app:clockOutTimeFormatted="@{detailsViewModel.entry}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_lunchout"
            tools:text="5:00 PM" />

        <TextView
            android:id="@+id/detail_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/double_margin"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_end"
            app:totalHoursFormatted="@{detailsViewModel.entry}"
            tools:text="Total Hours: 7.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:onClick="@{() -> detailsViewModel.onSave()}"
            android:text="@string/save_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detail_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:onClick="@{() -> detailsViewModel.onCancel()}"
            android:text="@string/cancel_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>